# spacy-training

./: .gitignore  pyproject.toml
notebooks/: Chapter 1 - Finding words, phrases, names and concepts.ipynb  Chapter 1 - Finding words, phrases, names and concepts.py  Chapter 2 - Large-scale data analysis with spaCy.ipynb  Chapter 2 - Large-scale data analysis with spaCy.py  Chapter 3 - Processing Pipelines.ipynb  Chapter 3 - Processing Pipelines.py
tests/: test_spacy_tutorial.py
