[tool.poetry]
name = "spacy-tutorial"
version = "0.1.0"
description = ""
authors = ["Szymon Wojciechowski <s.wojciechowski.uam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.4.1"
scikit-learn = "^1.1.2"
scikit-opt = "^0.6.6"
scikit-optimize = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupytext = "^1.14.1"
jupyterlab = "^3.4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
